--- a/admin/config.yml
+++ b/admin/config.yml
@@ -1,14 +1,14 @@
 backend:
   name: github
-  repo: maxemes/Typographic-Blog # Path to your GitHub repository
+  repo: eyscroll/Typographic-Blog # Path to your GitHub repository
   branch: master # Branch to update (master by default)
-  site_domain: https://fontasticmemes.netlify.app #Your site on netlify
+  site_domain: https://tender-feynman-ab0030.netlify.app #Your site on netlify
   use_graphql: true
 
 publish_mode: editorial_workflow
 show_preview_links: true
-display_url: https://fontasticmemes.netlify.app
-logo_url: https://fontasticmemes.netlify.app/uploads/logo.jpg
+display_url: https://tender-feynman-ab0030.netlify.app
+logo_url: https://tender-feynman-ab0030.netlify.app/uploads/logo.jpg
 
 # Do NOT edit below this line
 
